--- a/experiment/simulation/index.html
+++ b/experiment/simulation/index.html
@@ -16,7 +16,9 @@
    <li>Click the Toggle Assembly Mode button to run the mechanism in the two feasible assembly modes</li>
    <li>Drive the mechanism by rotating the coupler in place of the crank by using the slider labeled Theta3. Run in both the assembly modes by clicking the Toggle Assembly Mode button.</li>
     </ul>
-        
+    <p  style="text-align: center;padding-bottom: 10px;">                                
+		<img alt="4 Bar RRRR simulator" src="./images/4_bar_RRRP_simulator.png" style="width: 600px; height: 359px;" title="4 Bar RRRR simulator applet">                               
+	</p>
 		<p style="text-align: center;padding-bottom: 10px; font-size:15pt;">
             
             <a href="./position-analysis-of-a-4-bar-rrrp-grashofian-slider-crank-webgl-simulator.html" target="_blank">[WebGL Simulator]</a>
